--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = edad275
+	base = 69d53d4
 	trimbase = 
 	parent = release/kinetic/auv_msgs
-	previous = 
+	previous = edad275
