--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5fe165d
+	base = 1f729ad
 	trimbase = 
 	parent = arch/kinetic/auv_msgs
-	previous = 
+	previous = 5fe165d
