--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9531598
+	base = ee455ee
 	trimbase = 
 	parent = release/lunar/auv_msgs
-	previous = 
+	previous = 9531598
