--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c5ce8a1
+	base = ee4db14
 	trimbase = 
 	parent = arch/lunar/auv_msgs
-	previous = 
+	previous = c5ce8a1
